fix(yalb-alignment): add ci styles for layout, add sticky footer css, add wrapped image to pages

--- a/components/00-tokens/layout/_layout.scss
+++ b/components/00-tokens/layout/_layout.scss
@@ -30,7 +30,24 @@
   @media (min-width: tokens.$break-2xl) {
     --size-spacing-site-gutter: var(--size-spacing-10);
   }
+
+  height: 100%;
 }
+
+////////
+// sticky footer
+body,
+html {
+  height: 100%;
+}
+
+.layout-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+///////
 
 $layout-widths: map.deep-get(tokens.$tokens, size, component-layout, width);
 
